<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4CAF50"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/today_carbon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFC107"
                android:text="@string/today_carbon"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/average_carbon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#004CAF50"
                android:text="@string/average_carbon"
                android:textSize="24sp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/diary_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/diary_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4CAF50"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="addEntry"
                android:text="@string/add_button" />


            <Spinner
                android:id="@+id/new_entry_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <EditText
                android:id="@+id/new_entry_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/new_entry_amount"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/new_entry_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="unit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="#4CAF50"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/new_day"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="newDay"
                android:text="@string/new_day_button" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>